--- a/templates/index.html
+++ b/templates/index.html
@@ -412,89 +412,155 @@
         </div> 
     </div>
 
-<div class = "PASHA">
-    <div class="block15">
-        <span class="text15-1">Post a Comment</span>
-        <img src="../styles/images/Pavel/Photo15_2.png" class="Photo15-2">
-        <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
-        <button class="btn15-4">POST</button>
-        <a href="https://www.facebook.com/" class="text15-3" target="_blank">Facebook</a>
-        <a href="https://www.twitter.com/" class="text15-5" target="_blank">Twitter</a>
-        <span class="text15-4">|</span>
-        <input type="text" class="Input15-1">
-    </div>
-    <div class="block16">
-        <span class="text16-1">Comments</span>
-        <div class="block16-1"></div>
-        <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-1">
-        <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-2">
-        <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-3">
-        <img src="../styles/images/Dima/Photo2-1.png" class="Photo16-4">
-        <span class="text16-2">post by</span>
-        <span class="text16-3">Smuckersreg Toppings</span>
-        <a href="#text16-4" class="text16-4">reply</a>
-        <span class="date16-1">6/10/2014</span>
-        <span class="date16-2">6/10/2014</span>
-        <span class="date16-3">6/10/2014</span>
-        <span class="text16-5">Thanks for the recipe</span>
-        <div class="block16-2"></div>
-        <div class="block16-3"></div>
-        <div class="block16-4"></div>
-        <span class="text16-6">Thanks for the recipe</span>
-        <span class="text16-7">Smuckersreg Toppings</span>
-        <span class="text16-8">Smuckersreg Toppings</span>
-        <span class="text16-9">post by</span>
-        <span class="text16-10">post by</span>
-        <span class="text16-11">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
-        <a href="#text16-12" class="text16-12">24 more comments</a>
-        <a href="#reply16-2" class="reply16-2">reply</a>
-        <a href="#reply16-3" class="reply16-3">reply</a>
-        <span class="t456-1">456</span>
-        <span class="t456-2">456</span>
-        <span class="t456-3">456</span>
-        <span class="t15-1">15</span>
-        <span class="t15-2">15</span>
-        <span class="t15-3">15</span>
-        <span class="share16-1">
-            <i class="fa fa-share-alt"></i>
-        </span>
-        <span class="share16-2">
-            <i class="fa fa-share-alt"></i>
-        </span>
-        <span class="share16-3">
-            <i class="fa fa-share-alt"></i>
-        </span>
-        <img src="../styles/images/Pavel/Like.png" class="like16-1">
-        <img src="../styles/images/Pavel/Like.png" class="like16-2">
-        <img src="../styles/images/Pavel/Like.png" class="like16-3">
-        <div class="ellipse16">
-            <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
+    <div class="post_a_comment">
+        <div class="top-content15">
+            <span class="text15-1">Post a comment</span>
+            <div class="share15">
+                <a href="https://www.facebook.com/" class="facebook15" target="_blank">Facebook</a>
+                <span class="text15-4">|</span>
+                <a href="https://www.twitter.com/" class="twitter15" target="_blank">Twitter</a>
+            </div>
+        </div>
+        <div class="comment15">
+            <img src="../styles/images/Pavel/Photo15_1.png" class="Photo15-1">
+            <input type="text" class="Input15-1">
+            <button class="btn15-4">POST</button>
         </div>
     </div>
+
+    <div class="block16">
+
+        <div class="top-content16">
+            <span class="text16-1">Comments</span>
+            <div class="block16-1"></div>
+        </div>
+        <div class="other-content16">
+            <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-1">
+            <div class="sub-content1">
+                <div class="top-row16">
+                    <div class="top-comment16">
+                        <span class="text16-2">post by</span>
+                        <div class="smuck-reply1">
+                            <span class="text16-3">Smuckersreg Toppings</span>
+                            <a href="#text16-4" class="reply16-1">reply</a>
+                            <div class="top-likes16">
+                                <span class="t456-1">456</span>
+                                <span class="share16-1">
+                                <i class="fa fa-share-alt"></i>
+                            </span>
+                                <span class="t15-1">15</span>
+                                <span class="like16-">
+                                <i class="fa-solid fa-thumbs-up"></i>
+                            </span>
+                            </div>
+                        </div>
+                        <span class="date16-1">6/10/2014</span>
+                    </div>
+                </div>
+                <div class="comment-img">
+                    <img src="../styles/images/Dima/Photo2-1.png" class="Photo16-4">
+                    <div class="pintlink16  ">
+                        <a href="https://www.pinterest.com/"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
+                    </div>
+                    <div class="ellipse16"></div>
+                    <span class="text16-5">Thanks for the recipe</span>
+                </div>
+                <div class="block16-2"></div>
+                <div class="other-content16-2">
+                    <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-2">
+                    <div class="sub-content2">
+                        <div class="center-row16">
+                            <div class="center-comment16">
+                                <span class="text16-9">post by</span>
+                                <div class="smuck-reply2">
+                                    <span class="text16-8">Smuckersreg Toppings</span>
+                                    <a href="#reply16-2" class="reply16-2">reply</a>
+                                    <div class="center-likes16">
+                                        <span class="t456-2">456</span>
+                                        <span class="share16-2">
+                                            <i class="fa fa-share-alt"></i>
+                                        </span>
+                                        <span class="t15-2">15</span>
+                                        <span class="like16-2">
+                                            <i class="fa-solid fa-thumbs-up"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                                <span class="date16-2">6/10/2014</span>
+                                <span class="text16-11">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
+                            </div>
+                            <span class="text16-12">24 more comments</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block16-3"></div>
+        <div class="bottom-content16">
+            <img src="../styles/images/Pavel/Photo15_1.png" class="Photo16-2">
+            <div class="sub-content2">
+                <div class="center-row16">
+                    <div class="center-comment16">
+                        <span class="text16-9">post by</span>
+                        <div class="smuck-reply2">
+                            <span class="text16-8">Smuckersreg Toppings</span>
+                            <a href="#reply16-2" class="reply16-2">reply</a>
+                            <div class="bottom-likes16">
+                                <span class="t456-2">456</span>
+                                <span class="share16-2">
+                                    <i class="fa fa-share-alt"></i>
+                                </span>
+                                <span class="t15-2">15</span>
+                                <span class="like16-2">
+                                    <i class="fa-solid fa-thumbs-up"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <span class="date16-3">6/10/2014</span>
+                        <span class="text16-11">Thanks for the recipe</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block16-4"></div>
+    </div>
+
     <div class="block17">
-        <a href="#text17-arrowleft" class="text17-arrowleft"><</a>
-        <a href="#text17-1" class="text17-1">1</a>
-        <a href="#text17-2" class="text17-2">2</a>
-        <a href="#text17-3" class="text17-3">3</a>
-        <a href="#text17-4" class="text17-4">4</a>
-        <a href="#text17-5" class="text17-5">5</a>
-        <a href="#text17-6" class="text17-6">6</a>
-        <a href="#text17-arrowright" class="text17-arrowright">></a>
+        <div class="navigation_bar">
+            <a href="#text17-arrowleft" class="text17-arrowleft"><</a>
+            <a href="#text17-1" class="text17-1">1</a>
+            <a href="#text17-2" class="text17-2">2</a>
+            <a href="#text17-3" class="text17-3">3</a>
+            <a href="#text17-4" class="text17-4">4</a>
+            <a href="#text17-5" class="text17-5">5</a>
+            <a href="#text17-6" class="text17-6">6</a>
+            <a href="#text17-arrowright" class="text17-arrowright">></a>
+        </div>
     </div>
-    <div class="block18">
-        <a href="#"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>
-        <a href="#" class="text18-1">HOME</a>
-        <a href="#text18-2" class="text18-2">RECIPES</a>
-        <a href="#text18-3" class="text18-3">PHOTO GALLERIES</a>
-        <a href="#text18-4" class="text18-4">VIDEOS</a>
-        <a href="#text18-5" class="text18-5">ALL CATEGORIES</a>
-        <span class="text18-6">2016-2017 LEMON. ALL RIGHT RESERVED</span>
-        <a href="https://www.google.com/" target="_blank"><span class="google18"><i class="fab fa-google-plus-g"></i></span></a>
-        <a href="https://www.twitter.com/" target="_blank"><span class="twitter18"><i class="fa-brands fa-twitter"></i></span></a>
-        <a href="https://www.facebook.com/" target="_blank"><span class="facebook18"><i class="fa-brands fa-facebook-f"></i></span></a>
-        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
+    <div class="footer">
+        <div class="footer_content">
+            <a href="#"><img src="../styles/images/Pavel/Logo_black.png" class="Logo_black"></a>
+            <nav>
+                <ul class="nav_links_footer">
+                    <li><a href="#" class="text18-1">HOME</a></li>
+                    <li><a href="#text18-2" class="text18-2">RECIPES</a></li>
+                    <li><a href="#text18-3" class="text18-3">PHOTO GALLERIES</a></li>
+                    <li><a href="#text18-4" class="text18-4">VIDEOS</a></li>
+                    <li><a href="#text18-5" class="text18-5">ALL CATEGORIES</a></li>
+                </ul>
+            </nav>
+            <span class="Text18_1">
+                <i class="far fa-copyright"></i>
+                2016-2017 LEMON. ALL RIGHT RESERVED
+            </span>
+        </div>
+        <div class="links18">
+            <a href="https://www.google.com/" target="_blank"><span class="google18"><i class="fab fa-google-plus-g"></i></span></a>
+            <a href="https://www.twitter.com/" target="_blank"><span class="twitter18"><i class="fa-brands fa-twitter"></i></span></a>
+            <a href="https://www.facebook.com/" target="_blank"><span class="facebook18"><i class="fa-brands fa-facebook-f"></i></span></a>
+            <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest18"><i class="fa-brands fa-pinterest"></i></span></a>
+        </div>
     </div>
-</div>
 
 </body>
 </html>
