SuperUltraMegaDuperHyper small fix Pro Max

--- a/templates/index.html
+++ b/templates/index.html
@@ -460,7 +460,7 @@
                 <div class="comment-img">
                     <img src="../styles/images/Dima/Photo2-1.png" class="Photo16-4">
                     <div class="pintlink16  ">
-                        <a href="https://www.pinterest.com/"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"><span class="pinterest16"><i class="fa-brands fa-pinterest"></i></span></a>
                     </div>
                     <div class="ellipse16"></div>
                     <span class="text16-5">Thanks for the recipe</span>
